<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_weather"
            android:checked="true"
            android:icon="@drawable/ic_weather"
            android:title="@string/weather" />
        <item
            android:id="@+id/navigation_item_paowang"
            android:icon="@drawable/ic_reading"
            android:title="@string/paowang" />
        <item
            android:id="@+id/navigation_item_fuli"
            android:icon="@drawable/ic_gank"
            android:title="@string/fuli" />
    </group>

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/navigation_item_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/setting" />

            <item
                android:id="@+id/navigation_item_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
        </menu>
    </item>
</menu>